--- a/style.css
+++ b/style.css
@@ -2,6 +2,18 @@
     width: 50px;
     height: 25px;
     background-color: #20b536;
-    position: absolute;
-    
+    position: absolute;  
 }
+button{
+    background-color: cornsilk;
+    color: darkgreen;
+    border: dotted;
+}
+
+#track> button{
+    transition: box-shadow 0.3s ease-in-out;
+}
+.effect button:hover {
+    box-shadow: 0 20px 10px rgba(207, 11, 11, 0.3);
+  }
+  
