--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
+
+.jumbotron{
+    opacity: 0;
+    animation: fade-in  4s 0.5s forwards;
+}
+@keyframes fade-in {
+    from {
+      opacity: 0;
+    }
+  
+    to {
+      opacity: 1;
+    }
+  }
 #badge{
     width: 50px;
     height: 25px;
@@ -14,6 +28,6 @@ button{
     transition: box-shadow 0.3s ease-in-out;
 }
 .effect button:hover {
-    box-shadow: 0 20px 10px rgba(207, 11, 11, 0.3);
+    box-shadow: 0 20px 10px rgba(6, 10, 243, 0.3);
   }
   
